<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/fitness_app"
        android:background="?colorPrimary"
        app:titleTextColor="?colorOnPrimary" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/intro" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/become_stronger"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin"/>
        <Button
            android:id="@+id/goBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_exercises"
            android:layout_marginTop="@dimen/margin" />
    </LinearLayout>



</LinearLayout>