<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExerciseActivity"
    android:paddingHorizontal="8dp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/fitness_app"
        android:background="?colorPrimary"
        app:titleTextColor="?colorOnPrimary" />
    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        tools:text="Exercise"/>
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifGIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:src="@drawable/bicycle"/>
    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginHorizontal="@dimen/margin"
        tools:text="Description of exercise" />
    <TextView
        android:id="@+id/timerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/time_left_0" />
    <Button
        android:id="@+id/startBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_exercise"/>
</LinearLayout>